# kvraft-rs

./: .gitignore  Cargo.toml  README.md  build.rs  state-50051.json  state-50052.json
proto/: appendentries.proto  raft_service.proto  requestvote.proto  test.proto
src/: client.rs  server.rs
