[package]
name = "raft-protocol"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "client"
path = "src/client.rs"

[dependencies]
tonic = "*"
prost = "0.14"
tonic-prost = "*"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread","signal"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
rand = "0.9.2"

[build-dependencies]
tonic-prost-build = "*"
